# sec-check

./: .editorconfig  .env.example  .gitignore  README.md  SETUP.md  activate.sh  agentsec.example.yaml
.github/: copilot-instructions.md
.github/.context/: agent-sample.md  attack-check-script.md  attack-checklist.md  attack-list.md  attack-run-isolation.md  attack-samples.md  attack-vectors-general.md
.github/agents/: sck.malicious-code-scanner.agent.md
.github/instructions/: copilot-sdk-python.instructions.md
.github/prompts/: sck.create-security-skill.prompt.md  sck.plan-security-fix.prompt.md  sck.security-scan-precommit.prompt.md  sck.security-scan-python.prompt.md  sck.security-scan-quick.prompt.md  sck.security-scan-shell.prompt.md  sck.security-scan-supply-chain.prompt.md  sck.security-scan.prompt.md  (+3 more)
audit-results/: 001-scan-results.md  002-scan-results.md  002-tools-audit.md  003-no-skills-scan-results.md  005-cli-scan-report.md  006-scan-progress.md  remediation-tasks.md  scan-results.md  scan-tools-recomend.md
cli/: README.md  pyproject.toml
cli/agentsec_cli/: __init__.py  main.py
core/: README.md  pyproject.toml
core/agentsec/: __init__.py  agent.py  config.py  orchestrator.py  progress.py  session_logger.py  session_runner.py  skill_discovery.py  skills.py  tool_health.py
core/tests/: test_progress.py  test_skills.py
scripts/: build_release.py  install-linux.sh  install-macos.sh  install-windows.ps1  install.sh  retag.sh
spec/: implementation-plan.md  plan-agentSec.md  subagent-orchestration-guide.md
test-scan/: agentsec-scan-report.md  fresh-security-scan-report.md  utils.py  vulnerable_app.py
(+42 files in other folders)
