[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentsec-cli"
version = "0.1.0"
description = "AgentSec command-line security scanner"
requires-python = ">=3.10"
dependencies = [
    "agentsec-core>=0.1.0",
]

[project.scripts]
agentsec = "agentsec_cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
